// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getSizeStyles Get a correct size styles 1`] = `
{
  "general": {
    "height": "4px",
    "max-height": "3px",
    "max-width": "2px",
    "min-height": "1px",
    "min-width": "2px",
    "width": "1px",
  },
  "l": {
    "height": "1px",
    "max-height": "2px",
    "max-width": "2px",
    "min-height": "1px",
    "min-width": "3px",
    "width": "1px",
  },
  "m": {
    "height": "2px",
    "max-height": "1px",
    "max-width": "2px",
    "min-height": "2px",
    "min-width": "4px",
    "width": "3px",
  },
  "s": {
    "height": "1px",
    "max-height": "1px",
    "max-width": "3px",
    "min-height": "2px",
    "min-width": "1px",
    "width": "4px",
  },
  "xl": {
    "height": "3px",
    "max-height": "2px",
    "max-width": "3px",
    "min-height": "4px",
    "min-width": "1px",
    "width": "4px",
  },
  "xs": {
    "height": "3px",
    "max-height": "2px",
    "max-width": "3px",
    "min-height": "4px",
    "min-width": "1px",
    "width": "4px",
  },
  "xxl": {
    "height": "2px",
    "max-height": "1px",
    "max-width": "2px",
    "min-height": "2px",
    "min-width": "4px",
    "width": "3px",
  },
}
`;

exports[`getSizeStyles Get a correct size styles with force aspect ratio 1`] = `
{
  "general": {
    "height": "4px",
    "max-height": "3px",
    "max-width": "2px",
    "min-height": "1px",
    "min-width": "2px",
    "width": "1px",
  },
  "l": {
    "aspect-ratio": 1,
    "height": "auto !important",
    "max-height": "2px",
    "max-width": "2px",
    "min-height": "1px",
    "min-width": "3px",
    "width": "1px",
  },
  "m": {
    "aspect-ratio": 1,
    "height": "auto !important",
    "max-height": "1px",
    "max-width": "2px",
    "min-height": "2px",
    "min-width": "4px",
    "width": "3px",
  },
  "s": {
    "aspect-ratio": 1,
    "height": "auto !important",
    "max-height": "1px",
    "max-width": "3px",
    "min-height": "2px",
    "min-width": "1px",
    "width": "4px",
  },
  "xl": {
    "aspect-ratio": 1,
    "height": "auto !important",
    "max-height": "2px",
    "max-width": "3px",
    "min-height": "4px",
    "min-width": "1px",
    "width": "4px",
  },
  "xs": {
    "aspect-ratio": 1,
    "height": "auto !important",
    "max-height": "2px",
    "max-width": "3px",
    "min-height": "4px",
    "min-width": "1px",
    "width": "4px",
  },
  "xxl": {
    "height": "2px",
    "max-height": "1px",
    "max-width": "2px",
    "min-height": "2px",
    "min-width": "4px",
    "width": "3px",
  },
}
`;

exports[`getSizeStyles Get a correct size styles with full width 1`] = `
{
  "general": {
    "min-width": "100%",
  },
  "l": {
    "min-width": "initial",
  },
  "m": {
    "min-width": "initial",
  },
  "s": {
    "min-width": "initial",
  },
  "xl": {
    "min-width": "100%",
  },
  "xs": {
    "min-width": "initial",
  },
  "xxl": {
    "min-width": "100%",
  },
}
`;

exports[`getSizeStyles Get a correct size styles with full width 2 1`] = `
{
  "general": {
    "min-width": "100%",
  },
  "l": {
    "min-width": "100%",
  },
  "m": {
    "min-width": "3px",
  },
  "s": {
    "min-width": "0px",
  },
  "xl": {
    "min-width": "initial",
  },
  "xs": {
    "min-width": "0px",
  },
  "xxl": {
    "min-width": "100%",
  },
}
`;

exports[`getSizeStyles Get a correct size styles with full width 3 1`] = `
{
  "general": {
    "height": "4px",
    "max-height": "3px",
    "min-height": "1px",
    "min-width": "100%",
  },
  "l": {
    "height": "4px",
    "max-height": "3px",
    "min-height": "1px",
    "min-width": "100%",
  },
  "m": {
    "height": "4px",
    "max-height": "3px",
    "min-height": "1px",
    "min-width": "100%",
  },
  "s": {
    "height": "4px",
    "max-height": "3px",
    "min-height": "1px",
    "min-width": "100%",
  },
  "xl": {
    "height": "4px",
    "max-height": "3px",
    "min-height": "1px",
    "min-width": "100%",
  },
  "xs": {
    "height": "4px",
    "max-height": "3px",
    "min-height": "1px",
    "min-width": "100%",
  },
  "xxl": {
    "height": "4px",
    "max-height": "3px",
    "min-height": "1px",
    "min-width": "100%",
  },
}
`;

exports[`getSizeStyles Get a correct size styles with full width responsive 1`] = `
{
  "general": {
    "height": "4px",
    "max-height": "3px",
    "min-height": "1px",
    "min-width": "100%",
  },
  "l": {
    "height": "4px",
    "max-height": "2px",
    "max-width": "2px",
    "min-height": "1px",
    "min-width": "3px",
    "width": "fit-content",
  },
  "m": {
    "height": "4px",
    "max-height": "1px",
    "min-height": "2px",
    "min-width": "100%",
  },
  "s": {
    "height": "1px",
    "max-height": "1px",
    "max-width": "3px",
    "min-height": "2px",
    "min-width": "1px",
    "width": "fit-content",
  },
  "xl": {
    "height": "4px",
    "max-height": "2px",
    "min-height": "4px",
    "min-width": "100%",
  },
  "xs": {
    "height": "3px",
    "max-height": "2px",
    "min-height": "4px",
    "min-width": "100%",
  },
  "xxl": {
    "height": "2px",
    "max-height": "1px",
    "max-width": "2px",
    "min-height": "2px",
    "min-width": "4px",
    "width": "fit-content",
  },
}
`;

exports[`getSizeStyles Get a correct size styles with full width responsive 2 1`] = `
{
  "general": {
    "height": "4px",
    "max-height": "3px",
    "max-width": "2px",
    "min-height": "1px",
    "min-width": "2px",
    "width": "fit-content",
  },
  "l": {
    "height": "4px",
    "max-height": "2px",
    "min-height": "1px",
    "min-width": "100%",
  },
  "m": {
    "height": "4px",
    "max-height": "1px",
    "max-width": "2px",
    "min-height": "2px",
    "min-width": "3px",
    "width": "fit-content",
  },
  "s": {
    "height": "1px",
    "max-height": "1px",
    "min-height": "2px",
    "min-width": "100%",
  },
  "xl": {
    "height": "4px",
    "max-height": "2px",
    "max-width": "3px",
    "min-height": "4px",
    "min-width": "1px",
    "width": "fit-content",
  },
  "xs": {
    "height": "3px",
    "max-height": "2px",
    "max-width": "3px",
    "min-height": "4px",
    "min-width": "1px",
    "width": "fit-content",
  },
  "xxl": {
    "height": "2px",
    "max-height": "1px",
    "min-height": "2px",
    "min-width": "100%",
  },
}
`;

exports[`getSizeStyles Get a correct size styles with width fit content 1`] = `
{
  "general": {
    "height": "4px",
    "max-height": "3px",
    "max-width": "2px",
    "min-height": "1px",
    "min-width": "2px",
    "width": "fit-content",
  },
  "l": {
    "height": "4px",
    "max-height": "2px",
    "max-width": "2px",
    "min-height": "1px",
    "min-width": "3px",
    "width": "fit-content",
  },
  "m": {
    "height": "4px",
    "max-height": "1px",
    "max-width": "2px",
    "min-height": "2px",
    "min-width": "4px",
    "width": "fit-content",
  },
  "s": {
    "height": "1px",
    "max-height": "1px",
    "max-width": "3px",
    "min-height": "2px",
    "min-width": "1px",
    "width": "fit-content",
  },
  "xl": {
    "height": "4px",
    "max-height": "2px",
    "max-width": "3px",
    "min-height": "4px",
    "min-width": "1px",
    "width": "fit-content",
  },
  "xs": {
    "height": "3px",
    "max-height": "2px",
    "max-width": "3px",
    "min-height": "4px",
    "min-width": "1px",
    "width": "fit-content",
  },
  "xxl": {
    "height": "2px",
    "max-height": "1px",
    "max-width": "2px",
    "min-height": "2px",
    "min-width": "4px",
    "width": "fit-content",
  },
}
`;

exports[`getSizeStyles Should return an empty object if the width/height is an empty string and the unit is not empty 1`] = `
{
  "general": {
    "min-width": "initial",
  },
  "l": {
    "min-width": "initial",
  },
  "m": {
    "min-width": "initial",
  },
  "s": {
    "min-width": "initial",
  },
  "xl": {
    "min-width": "initial",
  },
  "xs": {
    "min-width": "initial",
  },
  "xxl": {
    "min-width": "initial",
  },
}
`;
